Cambios agregue descripción y parrafo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Hola Mundo</title>
 </head>
 <body>
+    <p>
+       Hola 
+       Esta es una prueba del uso de GIT 
+    </p>
 
 </body>
 </html>
